fixed small errors

--- a/iscsi/default.jinja
+++ b/iscsi/default.jinja
@@ -1,8 +1,9 @@
 {% set target_defaults = {
-    enabled: True,
+    'enabled': True,
+    'pidfile': '/var/run/ctld.pid',
     }
 %}
 {% set initiator_defaults = {
-    auto_connect: True,
+    'auto_connect': True,
     }
 %}
